feat: use RDS instead of DynamoDb, update link in the OpenAPI specification file
